--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,7 @@ inputs:
   excludedUrls:
     description: 'Any links that you want to exclude from the test (any expected failures)'
     required: false
+    default: ''
 runs:
   using: 'composite'
   steps:
