--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "main": "src/index.js",
     "author": "Dawid Oskwarek",
     "license": "N/A",
+    "scripts": {
+        "test": "node src/index.js"
+    },
     "dependencies": {
         "chai": "^4.3.6",
         "puppeteer": "^15.4.0",
