--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,12 @@ runs:
       id: npm-cache-dir
       run: |
         echo "::set-output name=dir::$(npm config get cache)"
+    - uses: actions/cache@v3
+      with:
+        path: ${{ steps.npm-cache-dir.outputs.dir }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json')}}
+        restore-keys: |
+          ${{ runner.os }}-node-
     - shell: bash
       run: npm ci
     - shell: bash
