--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "author": "Dawid Oskwarek",
     "license": "N/A",
     "scripts": {
-        "test": "node ./src/index.js"
+        "test": "node ./dist/index.js",
+        "build": "ncc build src/index.js -o dist"
     },
     "dependencies": {
         "chai": "^4.3.6",
         "puppeteer": "^15.4.0",
         "puppeteer-cluster": "^0.23.0"
     },
+    "devDependencies": {
+        "@vercel/ncc": "^0.31.1"
+      },
     "type": "module"
 }
