--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "author": "Dawid Oskwarek",
     "license": "N/A",
     "scripts": {
-        "test": "node ./dist/index.js",
-        "build": "ncc build src/index.js -o dist"
+        "test": "node ./src/index.js"
     },
     "dependencies": {
         "chai": "^4.3.6",
         "puppeteer": "^15.4.0",
         "puppeteer-cluster": "^0.23.0"
     },
-    "devDependencies": {
-        "@vercel/ncc": "^0.31.1"
-      },
     "type": "module"
 }
