--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
     - uses: actions/checkout@v3
       with:
         repository: Dawid-Oskwarek/broken-link-checker-action
-        ref: update2
+        ref: main
         token: ${{ inputs.token }}
         path: ./broken-link-checker
     - uses: actions/setup-node@v3
