--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
     - shell: bash
       run: npm install --prefix=broken-link-checker
     - shell: bash
-      run: npm run test
+      run: node ./broken-link-checker/src/index.js
       env:
         urlsToCheck: ${{ inputs.urlsToCheck }}
         excludedUrls: ${{ inputs.excludedUrls }}
